Security/ServiceAccount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  serviceAccountName: app-sa #--------> connect pod to ServiceAccount
  containers:
  - name: app
    image: nginx
--------------------Add Role&RoleBinding for ServiceAccount -----------------
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: pod-reader
  namespace: default
rules:
- apiGroups: [""]
  resources: ["pods"]
  verbs: ["get","list"]
---
TOKEN=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
APISERVER="https://kubernetes.default.svc"

curl -k \
  -H "Authorization: Bearer $TOKEN" \
  $APISERVER/api
--------------------------we can create token manuely it's avlable for 1 hour --------------------
TOKEN=$(kubectl create token default)
curl -k -H "Authorization: Bearer $TOKEN" https://127.0.0.1:6443/api
