Security/NetworkPolicy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-pod
  labels:
    app: db
spec:
  containers:
  - name: mysql
    image: mysql
    ports:
    - containerPort: 3306
---
apiVersion: v1
kind: Pod
metadata:
  name: api-pod
  labels:
    app: api
spec:
  containers:
  - name: api
    image: nginx
-------------------------------------Ingress------------------------------------
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-to-db
spec:
  podSelector:
    matchLabels:
      app: db          #---> Apply for pod with app=db 
  policyTypes:
  - Ingress
  ingress:  #----> ingress traffic
  - from:
    - podSelector:
        matchLabels:
          app: api      #---> accept traffic from pod with app=api 
    ports:
    - protocol: TCP
      port: 3306
--------------------------------Egress-----------------------------------------
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-egress-to-db
spec:
  podSelector:
    matchLabels:
      app: api      #---> Apply for pod with app=api 
  policyTypes:
  - Egress
  egress:  #----> egress traffic
  - to:
    - podSelector:
        matchLabels:
          app: db   #---> send traffic to pod with app=db 
    ports:
    - protocol: TCP
      port: 3306
